--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
   "require": {
     "symfony/http-client": "^7.1",
-    "tecnickcom/tcpdf": "^6.7"
-  }
+    "tecnickcom/tcpdf": "^6.7",
+    "vlucas/phpdotenv": "^5.6"
+  },
+    "autoload": {
+        "psr-4": {
+        "TicketData\\": "src/"
+        }
+    }
 }
