--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
         "psr-4": {
         "TicketData\\": "src/"
         }
-    }
+    },
+  "require-dev": {
+    "phpstan/phpstan": "^2.0"
+  }
 }
