--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "symfony/http-client": "^7.1",
     "tecnickcom/tcpdf": "^6.7",
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "ramsey/uuid": "^4.7"
   },
     "autoload": {
         "psr-4": {
