chore(dep): add new dependances and update the old one

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         }
     },
   "require-dev": {
+    "roave/security-advisories": "dev-latest"
+    ,
     "phpstan/phpstan": "^2.0"
   }
 }
