--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,4 +1,13 @@
+includes:
+    - vendor/larastan/larastan/extension.neon
+    - vendor/nesbot/carbon/extension.neon
+    
 parameters:
-	level: 6
-	paths:
-		- src
+    level: 6
+    paths:
+        - app
+        - config
+        - database
+        - resources
+        - routes
+        - tests
